Update server configuration and fix Vercel deployment

--- a/templates/welcome.hbs
+++ b/templates/welcome.hbs
@@ -163,7 +163,7 @@
         
         <div class="content">
             <div class="greeting">
-                Hey {{name}}! 👋
+                Hey {{name}}!
             </div>
             
             <div class="message">
@@ -178,7 +178,7 @@
             {{/if}}
 
             <div class="features">
-                <h3>🚀 What you can do now:</h3>
+                <h3>What you can do now:</h3>
                 <ul class="feature-list">
                     <li>Upload and share your tracks with the community</li>
                     <li>Give and receive valuable feedback from fellow musicians</li>
@@ -194,7 +194,7 @@
 
             <div style="text-align: center;">
                 <a href="{{dashboardUrl}}" class="cta-button">
-                    🎯 Start Your Musical Journey
+                    Start Your Musical Journey
                 </a>
             </div>
 
